# c2csim

./: .env  .gitignore  CMakeLists.txt  Main.qml  README.md  SumoInterface.cpp  geoconverter.cpp  main.cpp
.qt_plugins/: Qt6_QmlPlugins_Imports_appsumotest.rsp
.rcc/: appsumotest_raw_qml_0.qrc  qmake_sumotest.qrc
.rcc/qmlcache/: appsumotest_qml_loader_file_list.rsp
headers/: SumoInterface.h
sumo-integrator-master/include/sumo-integrator/core/: Sumo.h
sumofiles/: osm.netccfg  osm.passenger.trips.xml  osm.polycfg  osm.sumocfg
